# events_stuff_main

code/data/: ES.gz_dummy
code/elements/: .gitignore  ascii_fix_parser.h  auto_stacker.h  bb_manager.h  bt_events_manager.h  circular_fifo.h  cme_ascii_secdef_parser.h  cme_channel_manager.h  cme_fill_simulator.h  cme_order_manager.h  cme_sbe_parser.h  cme_server_message_normalizer.h  easy_time.cpp  easy_time.h  eco_event.h  eloop.h  event_trader.h  event_trader_fair_calculator.h  event_trader_utils.h  feed.h  fix_tokenizer.h  global_price_multiplier.h  instrument.h  linux_event_loop.h  linux_event_loop.hpp  md.h  md_translate.h  msg_compiler.py  oob_logger.h  order_book.h  order_entry_manager.h  order_interface.h  order_stacker.h  parameters_manager.h  params.proto  price_level_book.h  rebuild_all.sh  secdef.h  snapshot.h  stacker_utility.h  (+5 more)
code/elements/click_trader/: .gitignore  click_trader.param  cme_md_config.properties  field_mask  main.cpp  meson.build  messages.msg  oms_config.properties  params_pb2.py  test.cfg  user.proto  user_pb2.py
code/elements/etfc/: etfc_baker_hughes.h  etfc_employment_situation.h
code/elements/globex/: AdminHeartbeat12.hpp  AdminLogin15.hpp  AdminLogout16.hpp  AggressorSide.hpp  ChannelReset4.hpp  DecimalQty.hpp  EventType.hpp  FLOAT.hpp  GroupSize.hpp  GroupSize8Byte.hpp  LegSide.hpp  (+31 more)
code/elements/templates/: REPLACE.param  clean  cme_md_config.properties  field_mask  main.cpp  make  meson.build  messages.msg  oms_config.properties  user.proto
code/fix/: .gitignore  FIX50.xml  FIX50CME.xml  ascii_fix_parser_compiler.py  ascii_secdef_parser_compiler.py  fix_parser_template.h  fix_tokenizer.h
code/fix/test/: main.cpp  meson.build
code/gui/: field_mask  param_edit.py  params.proto  params_pb2.py  status.py  status_test  strategy.param
code/pybt/: arrange.sh  bonds.py  chop_file.py  chop_file.sh  chop_files_command.sh  evolver.py  extract.sh  extract_all_secdef.sh  extract_secdef.sh  fill_gaps.py  install_PROD.sh  make_chops.sh  make_generator_command.py  move_snapshots.sh  nohup.out  payroll_bt.py  process_one_day_ascii.sh  process_one_day_ascii_all.sh  pybt.py  simple_backtest.py  simple_backtest2.py  snapshot_generator.py  sync_move_snapshots.sh  sync_staging.sh  utils.py
(+64 files in other folders)
